# RetOS

./: .gitignore  Cargo.toml  README.md  build.rs  create_tap_interface.sh  ping.py  rust-toolchain.toml
kernel/: Cargo.toml
kernel/src/: allocator.rs  clock.rs  lib.rs  logger.rs  main.rs
kernel/src/devices/: acpi.rs  apic.rs  mmio.rs  mod.rs  network_controller.rs  pci.rs  serial.rs  xhci.rs
kernel/src/devices/drivers/: e1000.rs  mod.rs  rtl8139.rs
kernel/src/devices/network/: controller.rs  device.rs  driver.rs  interface.rs  interrupt.rs  manager.rs  mod.rs
kernel/src/devices/pic/: apic.rs  legacy.rs  mod.rs  pic.rs
kernel/src/interrupts/: gdt.rs  idt.rs  interrupt.rs  mod.rs  pics.rs
kernel/src/memory/: allocator.rs  bootloader.rs  heap_allocator.rs  mod.rs  pagination.rs  tables.rs
kernel/src/printer/: buffer.rs  color.rs  macros.rs  mod.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  task.rs  terminal.rs
kernel/src/terminal/: args.rs  cli.rs  error.rs  macros.rs  mod.rs  terminal.rs  verbosity.rs
kernel/src/terminal/arguments/: ip_address.rs  network_interface.rs
kernel/src/terminal/commands/: clear.rs  echo.rs  keyboard.rs  lspci.rs  mod.rs  ping.rs  ps.rs  scanpci.rs  shutdown.rs  sleep.rs  top.rs  uptime.rs
kernel/src/terminal/commands/ip/: address.rs  interface.rs  ip.rs  mod.rs  route.rs
kernel/src/terminal/custom_arguments/: ip_address.rs  mod.rs  network_interface.rs  verbosity.rs
retos-macros/: Cargo.toml
retos-macros/src/: lib.rs
src/: constants.rs  main.rs
