[package]
name = "retos"
version = "0.1.0"
edition = "2021"
default-run = "qemu_uefi"

[workspace]
members = ["kernel", "retos-macros"]

[dependencies]
ovmf-prebuilt = "0.2.2"

[build-dependencies]
bootloader = "0.11.10"
retos-kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none", version = "0.1.0" }
retos-macros = { path = "retos-macros"}

[workspace.dependencies]
retos-kernel = { version = "0.1.0", path = "kernel" }
retos-macros = { version = "0.1.0", path = "retos-macros"}