[package]
name = "retos-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
# CPU
bootloader_api = "0.11.12"
x86_64 = "0.15.2"

# Alloc
spin = { version = "0.10.0", features = ["lazy"] }
talc = { version = "4.4.3", features = ["counters"] }

# Async
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc", "nightly"] }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc", "async-await", "sink"] }

# Devices
uart_16550 = { version = "0.4.0", features = ["nightly"] }
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
acpi = "5.2.0"
pci_types = "0.10.0"
xhci = "0.9.2"

# Cli
no_std_clap_core = { version = "0.1.0", path = "../../no_std_clap/no_std_clap_core" }
no_std_clap_macros = { version = "0.1.0", path = "../../no_std_clap/no_std_clap_macros" }

# Errors
thiserror = { version = "2.0.16", default-features = false }

# Log
goolog = "0.11.0"

# Utils
smallvec = "1.14.0"
accessor = "0.3.3"
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
paste = "1.0.15"
noto-sans-mono-bitmap = { version = "0.3.1", default-features = false, features = ["regular", "size_16", "bold", "unicode-basic-latin", "unicode-specials", "unicode-latin-1-supplement", "unicode-latin-extended-a"]}
yansi = { version = "1.0.1", default-features = false, features = ["alloc"]}
text-tables = { version = "0.4.0", git = "https://github.com/Julien-cpsn/text-table-rs" }
qemu-exit = "3.0.2"
byteorder = { version = "1.5.0", default-features = false}
retos-macros = { path = "../retos-macros" }

# Network
[dependencies.smoltcp]
version = "0.12.0"
default-features = false
features = [
    "alloc",
    "medium-ethernet", "medium-ip",
    "socket-raw", "socket-udp", "socket-tcp", "socket-icmp", "socket-dhcpv4", "socket-dns",
    "proto-ipv4", "proto-ipv6", "proto-dhcpv4", "proto-ipsec",
    "proto-ipv4-fragmentation", "proto-ipv6-fragmentation",
    "packetmeta-id", "multicast",
    "verbose", "log",
]